# yolov8_tensorrt

./: CMakeLists.txt  README.md
include/: block.h  calibrator.h  config.h  process.h  utils.h
plugin/: yololayer.cu  yololayer.h
src/: calibrator.cpp  gen_wts.py  main.cpp  model.cpp  process.cu  utils.cpp
